force-app/main/default/objects/Invoices__c/Invoices__c.object-meta.xml
<CustomObject>
    <label>Payment Milestones</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>