force-app/main/default/objects/Invoices__c/fields/Initiated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initiated_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Initiated Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>