force-app/main/default/objects/Invoices__c/fields/Invoice_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status_Icon__c</fullName>
    <formula>IF( Realized_Amount__c &gt; 0, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30), IF( TODAY() &gt; Due_Date__c, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30), IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Status Icon</label>
    <type>Text</type>
</CustomField>