force-app/main/default/objects/Invoices__c/fields/Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option__c</fullName>
    <label>Payment Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Pay</fullName>
            </value>
            <value>
                <fullName>Manual Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>