force-app/main/default/objects/Invoices__c/fields/Payment_Terms_Net__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Net__c</fullName>
    <label>Payment Terms Net</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 15 Days</fullName>
            </value>
            <value>
                <fullName>Net 30 Days</fullName>
            </value>
            <value>
                <fullName>Net 45 Days</fullName>
            </value>
            <value>
                <fullName>Net 60 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>