force-app/main/default/objects/Invoices__c/fields/Realized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Realized_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Realized Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>