force-app/main/default/objects/Invoices__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
                <default>true</default>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>Not-Realized</fullName>
            </value>
            <value>
                <fullName>Realized</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
                <isActive>false</isActive>
                <label>Partially Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>