force-app/main/default/objects/Invoices__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Initiated_Amount__c</columns>
    <columns>Realized_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Status_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>School__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Realized_Amount__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>