force-app/main/default/objects/Invoices__c/listViews/This_Month_Pending_Invoices.listView-meta.xml
<ListView>
    <fullName>This_Month_Pending_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Due_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Payment_Terms_Net__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month Pending Invoices</label>
</ListView>