force-app/main/default/objects/Invoices__c/listViews/This_Quarter_Realized_Invoices.listView-meta.xml
<ListView>
    <fullName>This_Quarter_Realized_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Realized_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Realized</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <label>This Quarter Realized Invoices</label>
</ListView>